--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 .App {
     text-align: center;
+    width: 100%;
+    height: 100%;
 }
 
 .App-header {
-    /* background-color: #282c34; */
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -13,12 +14,7 @@
     color: white;
 }
 
-
-/* @keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-} */
+.map {
+    width: 100%;
+    height: 100%;
+}
