--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,46 @@
     text-align: center;
     width: 100%;
     height: 100%;
-}
-
-.App-header {
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
 }
 
-.map {
+.vis-body {
+    display: flex;
     width: 100%;
+    flex: 1 1 auto;
+}
+
+.left-column {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
     height: 100%;
+}
+
+.right-column {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    height: 100%;
+}
+
+.left-column .map {
+    flex: 4 1 auto;
+    display: flex;
+}
+
+.left-column .budget-comparison {
+    flex: 1 1 auto;
+    display: flex;
+}
+
+.right-column .money-per-resident {
+    flex: 1 1 auto;
+    display: flex;
+}
+
+.right-column .police-to-civilian-ratio {
+    flex: 4 1 auto;
+    display: flex;
 }
