--- a/src/App.css
+++ b/src/App.css
@@ -9,24 +9,29 @@
 .vis-body {
     display: flex;
     width: 100%;
+    flex: 8 1 auto;
+}
+
+.header {
+    display: flex;
     flex: 1 1 auto;
 }
 
 .left-column {
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 65%;
     height: 100%;
 }
 
 .right-column {
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 35%;
     height: 100%;
 }
 
 .left-column .map {
-    flex: 4 1 auto;
+    flex: 1 1 auto;
     display: flex;
 }
