--- a/src/BudgetComparison/styles.css
+++ b/src/BudgetComparison/styles.css
@@ -7,52 +7,23 @@
 }
 
 .left-column .budget-comparison .policing-budget-arrow {
-  width: 75%;
-  background-color: green;
-  position: relative;
-  /* background: red; */
-}
-
-/* .left-column .budget-comparison .policing-budget-arrow:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  border-left: 20px solid white;
-  border-top: 20px solid transparent;
-  border-bottom: 20px solid transparent;
-} */
-.left-column .budget-comparison .policing-budget-arrow:before {
-  content: "";
-  position: absolute;
-  right: -20px;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  border-left: 20px solid red;
-  border-top: 20px solid transparent;
-  border-bottom: 20px solid transparent;
-}
-
-.left-column .budget-comparison .policing-budget-arrow .curve {
-  position: absolute;
-  overflow: hidden;
-}
-
-.left-column .budget-comparison .policing-budget-arrow .curve:before {
-  content: "";
-  position: absolute;
+    fill: none;
+    stroke: purple;
+    stroke-width: 1px;
 }
 
 .left-column .budget-comparison .other-budget-arrow {
-  width: 75%;
-  background-color: pink;
+    fill: none;
+    stroke: purple;
+    stroke-width: 1px;
 }
 
-.left-column .budget-comparison .other-budget-arrow::before {
+.left-column .budget-comparison .policing-budget-text {
+    font: italic 40px serif;
+    fill: blue;
 }
 
-.left-column .budget-comparison .other-budget-arrow::after {
+.left-column .budget-comparison .other-budget-text {
+    font: italic 40px serif;
+    fill: blue;
 }
