--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,17 @@
     display: flex;
     flex-direction: column;
 }
+/* 
+.vis-body {
+    display: flex;
+    width: 100%;
+    flex: 8 1 auto;
+} */
+
+.header {
+    display: flex;
+    flex: 1 1 auto;
+}
 
 .vis-body {
     display: flex;
@@ -12,12 +23,7 @@
     flex: 8 1 auto;
 }
 
-.header {
-    display: flex;
-    flex: 1 1 auto;
-}
-
-.left-column {
+/* .left-column {
     display: flex;
     flex-direction: column;
     width: 65%;
@@ -34,4 +40,4 @@
 .left-column .map {
     flex: 1 1 auto;
     display: flex;
-}
+} */
