--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
     transition-duration: 0.5s;
     visibility: hidden;
     border: 1px solid red;
+    display: flex;
 }
 
 .vis-body .top-row.selected {
