--- a/src/BudgetComparison/styles.css
+++ b/src/BudgetComparison/styles.css
@@ -1,9 +1,9 @@
 .budget-comparison {
   /* flex: 1 1 auto; */
-  display: block;
+  display: inline-block;
   border: 1px solid blue;
   height: 100%;
-  width: 100%;
+  width: 33%;
 }
 
 .svg-arrows {
