--- a/src/BudgetPerCapita/styles.css
+++ b/src/BudgetPerCapita/styles.css
@@ -1,6 +1,8 @@
 .budget-per-capita {
-    display: inline;
-    border: 1px solid yellow;
+    display: inline-block;
+    width: 33%;
+    height: 100%;
+    border: 1px solid green;
 }
 
 .budget-per-capita .hundred {
