--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,49 @@
 .App {
+  display: block;
+}
+.title {
+  position: relative;
+}
+
+.title .title-image {
+  width: 100%;
+  height: auto;
+  margin: auto;
+  z-index: 1;
+}
+
+.title .title-card {
+  position: absolute;
+  width: 50%;
+  height: 45%;
+  background-color: white;
+  top: 25%;
+  left: 25%;
+  z-index: 2;
+}
+
+.title .title-card .officer {
+  position: absolute;
+  width: 17%;
+  height: 33%;
+  top: 60%;
+  left: 42%;
+  z-index: 3;
+
+}
+
+.title .title-card .title-text {
+  position: absolute;
+  font-family: 'Cormorant Garamond', serif;
+  text-align: center;
+  width: 80%;
+  font-size: 5vw;
+  top: 0%;
+  left: 10%;
+  z-index: 4;
+}
+
+.visualization {
   text-align: center;
   width: 100%;
   height: 100%;
