--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   width: 100%;
   height: auto;
   margin: auto;
+  filter: brightness(0.8);
   z-index: 1;
 }
 
@@ -19,6 +20,7 @@
   background-color: white;
   top: 25%;
   left: 25%;
+  border-radius: 3px;
   z-index: 2;
 }
 
@@ -26,7 +28,7 @@
   position: absolute;
   width: 17%;
   height: 33%;
-  top: 60%;
+  top: 65%;
   left: 42%;
   z-index: 3;
 
@@ -34,13 +36,24 @@
 
 .title .title-card .title-text {
   position: absolute;
-  font-family: 'Cormorant Garamond', serif;
+  font-family: 'georgia';
+  font-weight: 400;
   text-align: center;
-  width: 80%;
+  width: 90%;
   font-size: 5vw;
   top: 0%;
-  left: 10%;
+  left: 5%;
   z-index: 4;
+}
+
+.explanation {
+  width: 45%;
+  text-indent: 2em;
+  font-size: 1.5vw;
+  text-align: justify;
+  margin: auto;
+  margin-top: 48px;
+  font-family: 'georgia';
 }
 
 .visualization {
