--- a/src/BudgetComparison/styles.css
+++ b/src/BudgetComparison/styles.css
@@ -1,15 +1,15 @@
 .budget-comparison {
   /* flex: 1 1 auto; */
   display: inline-block;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   height: 100%;
-  width: 33%;
+  width: 50%;
 }
 
 .svg-arrows {
     width: 100%;
     height: 100%;
-    border: 1px solid green;
+    /* border: 1px solid green; */
 }
 
 .budget-comparison .svg-arrows .policing-budget-arrow {
