background and fill for map

--- a/src/BudgetPerCapita/styles.css
+++ b/src/BudgetPerCapita/styles.css
@@ -5,6 +5,11 @@
     /* border: 1px solid green; */
 }
 
+.budget-per-capita .budget-message {
+    font-size: 16px;
+    font-family: "futura";
+}
+
 .budget-per-capita .hundred {
     width: 125px;
     height: 53px;
