--- a/src/PoliceToCivilianRatio/styles.css
+++ b/src/PoliceToCivilianRatio/styles.css
@@ -25,6 +25,7 @@
     font-family: "futura";
     height: 10%;
     margin: 0;
+    margin-top: 16px;
 }
 
 .police-to-civilian-ratio .civilian-img {
