--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
 }
 
 .visualization {
-  background-color: lightgray;
+  background-color: #f5f5f5;
   text-align: center;
   width: 100%;
   height: 100%;
