--- a/src/PoliceToCivilianRatio/styles.css
+++ b/src/PoliceToCivilianRatio/styles.css
@@ -2,11 +2,9 @@
     height: 0%;
     width: 0%;
     transition-property: height, width, visibility;
-    transition-duration: 1s;
+    transition-duration: 0.5s;
     visibility: hidden;
-    /* border: 1px solid red; */
     display: block;
-    /* border: 1px solid green; */
 }
 
 .police-to-civilian-ratio.selected {
@@ -24,8 +22,7 @@
     font-size: 16px;
     font-family: "futura";
     height: 10%;
-    margin: 0;
-    margin-top: 16px;
+    margin: 20px 0px;
 }
 
 .police-to-civilian-ratio .civilian-img {
@@ -37,12 +34,25 @@
     overflow: visible;
     height: 90%;
     width: 100%;
-    /* border: 1px solid orange; */
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1200px) {
     .police-to-civilian-ratio {
-        width: 100%;
-        height: 33%;
+        width: 0%;
+        height: 0%;
+    }
+
+    .police-to-civilian-ratio .message {
+        font-size: 20px;
+        margin-bottom: 16px;
+    }
+
+    .police-to-civilian-ratio.selected {
+        visibility: visible;
+        width: 70%;
+        height: 70%;
+        margin: auto;
+        margin-bottom: 10%;
+        order: 1;
     }
 }
