--- a/src/BudgetPerCapita/styles.css
+++ b/src/BudgetPerCapita/styles.css
@@ -1,12 +1,13 @@
 .budget-per-capita {
     display: inline-block;
-    width: 40%;
+    width: 50%;
     height: 100%;
 }
 
 .budget-per-capita .budget-message {
     font-size: 16px;
     font-family: "futura";
+    margin: 16px 34px;
 }
 
 .budget-per-capita .hundred {
