--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,10 @@
   margin-bottom: 48px;
 }
 
+.explanation.second .explanation-link {
+  word-break: break-all;
+}
+
 .visualization {
   background-color: #f5f5f5;
   text-align: center;
@@ -73,6 +77,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  max-width: 1900px;
+  margin: auto;
 }
 
 .location {
@@ -87,6 +93,7 @@
   transition-duration: 4s;
   height: 10vh;
   width: 100vw;
+  max-width: 1900px;
 }
 
 .vis-body {
@@ -94,6 +101,8 @@
   height: 83vh;
   width: 100vw;
   overflow: hidden;
+  max-width: 1900px;
+  margin: auto;
 }
 
 .vis-body .left-side {
@@ -121,13 +130,6 @@
   height: 30%;
 }
 
-.vis-body .left-side .cta-reclick {
-  font-family: "futura";
-  font-size: 50px;
-  font-weight: normal;
-  margin: 40px 20px;
-}
-
 @media (max-width: 1200px) { 
   .location {
     font-size: 50px;
@@ -141,7 +143,6 @@
 
   .vis-body .left-side {
     width: 100vw;
-    order: 2;
   }
 
   .vis-body .left-side.selected {
@@ -151,5 +152,6 @@
   .vis-body .left-side .top-row.selected {
     flex-direction: column;
     height: 90%;
+    order: 2;
   }
 }
