--- a/src/BudgetComparison/styles.css
+++ b/src/BudgetComparison/styles.css
@@ -12,6 +12,7 @@
 .svg-arrows {
     width: 100%;
     height: 100%;
+    overflow: visible;
 }
 
 .budget-comparison .svg-arrows .policing-budget-arrow {
